# llm-lens

./: .gitignore  Dockerfile  README.md  cli.py  pyproject.toml  render.yaml  test_call.py
src/llm_lens/: __init__.py  cli.py  core.py  dashboard.html  patch.py  server.py
