[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-lens"
version = "0.1.0"
description = "Automatic observability for LLM API calls"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0.0",
]

[project.scripts]
llm-lens = "llm_lens.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_lens"]

