[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-lens-py"
version = "0.1.2"
description = "Automatic observability for LLM API calls"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]
readme = "README.md"

[project.scripts]
llm-lens = "llm_lens.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_lens"]

